--- a/src/Components/Contact/Contact.module.css
+++ b/src/Components/Contact/Contact.module.css
@@ -23,3 +23,40 @@
 margin-left: 30px;
     margin-top: 5%;
 }
+
+
+
+@media only screen and (max-width:851px) {
+
+    .bloque{
+        display: flex;
+        flex-direction: column;
+        scale: 0.7;
+    }
+
+    .container{
+        width: 100%;
+        display: flex;
+    }
+
+}
+
+@media only screen and (max-width:500px) {
+
+    .bloque{
+        display: flex;
+        flex-direction: column;
+        scale: 0.6;
+        align-items: flex-start;
+    }
+
+    .container{
+        width: 100%;
+        display: flex;
+    }
+
+    .container2{
+        display: block;
+    }
+
+}
