--- a/src/Components/Home.module.css
+++ b/src/Components/Home.module.css
@@ -25,3 +25,42 @@
     color:"#EAE7EC"; 
     background-color:"#b799bf57"
 }
+
+
+
+
+
+@media only screen and (max-width:851px) {
+
+    .bloque{
+        display: flex;
+        flex-direction: column;
+        scale: 0.7;
+    }
+
+    .container{
+        width: 100%;
+        display: flex;
+    }
+
+}
+
+@media only screen and (max-width:500px) {
+
+    .bloque{
+        display: flex;
+        flex-direction: column;
+        scale: 0.5;
+        align-items: flex-start;
+    }
+
+    .container{
+        width: 100%;
+        display: flex;
+    }
+
+    .container2{
+        display: block;
+    }
+
+}
