--- a/src/Components/NavBar/NavBar.module.css
+++ b/src/Components/NavBar/NavBar.module.css
@@ -38,3 +38,51 @@
 .link:active{
     color: #b6b6b6fb;
 }
+
+.linksresponsive{
+    display: none;
+}
+
+
+@media only screen and (max-width:851px) {
+    .links{
+        display:none
+    }
+    .linksresponsive{
+        display: flex;
+        margin: auto;
+        margin-left: 70%;
+        background-color: #2e2e2e;
+    }
+    .popover {
+        display: flex;
+        flex-direction: column;
+        background-color: #2e2e2e;
+        padding: 8px;
+        border-radius: 4px;
+        box-shadow: 0px 0px 16px rgba(0, 0, 0, 0.1);
+      }
+      
+}
+
+
+@media only screen and (max-width:500px) {
+
+    .links{
+        display:none
+    }
+    .linksresponsive{
+        display: flex;
+        margin: auto;
+        margin-left: 50%;
+        background-color: #2e2e2e;
+    }
+    .popover {
+        display: flex;
+        flex-direction: column;
+        background-color: #2e2e2e;
+        padding: 8px;
+        border-radius: 4px;
+        box-shadow: 0px 0px 16px rgba(0, 0, 0, 0.1);
+      }
+}
